<resources>
    <string name="app_name">Projecto1</string>
    <string name="login_title">Login</string>
    <string name="register_title">Registro</string>
    <string name="chat_title">Chat</string>
    <string name="users_title">Usuarios</string>

    <string name="name_hint">Nombre</string>
    <string name="email_hint">Correo electrónico</string>
    <string name="password_hint">Contraseña</string>
    <string name="login_button">Iniciar sesión</string>
    <string name="register_button">Crear cuenta</string>
    <string name="go_to_register">¿No tienes cuenta? Regístrate</string>
    <string name="go_to_login">¿Ya tienes cuenta? Inicia sesión</string>
    <string name="message_hint">Escribe un mensaje</string>
    <string name="send_button">Enviar</string>
    <string name="send_image">Enviar imagen</string>
    <string name="image_message">Imagen enviada en el chat</string>
    <string name="back_button">Volver</string>
    <string name="notification_channel_id" translatable="false">mensajes</string>
    <string name="notification_channel_name">Mensajes nuevos</string>
</resources>